--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
