--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,11 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+       <meta-data
+       android:name="com.google.android.geo.API_KEY"
+       android:value="AIzaSyBEDlrmrLQROFqdh_2AZDZ0NEKpTn5As5Q"/>
+          <!-- You will also only need to add this uses-library tag AIzaSyAC53EnO9budvkF6xVC77qnA9XbFkKkVms -->
+       <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 </manifest>
