--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-circular-progress-indicator": "^3.0.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-maps": "^0.30.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-paper": "^4.12.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
