--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-circular-progress-indicator": "^3.0.0",
+    "react-native-flash-message": "^0.2.1",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "^0.30.1",
     "react-native-maps-directions": "^1.8.0",
