--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@rneui/base": "github:react-native-elements/react-native-elements#base",
@@ -20,10 +21,12 @@
     "react-native-circular-progress-indicator": "^3.0.0",
     "react-native-flash-message": "^0.2.1",
     "react-native-geolocation-service": "^5.3.0-beta.4",
+    "react-native-gesture-handler": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "^0.30.1",
     "react-native-maps-directions": "^1.8.0",
     "react-native-paper": "^4.12.0",
+    "react-native-reanimated": "^2.7.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-sqlite-storage": "^6.0.1",
