--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
@@ -18,6 +19,7 @@
     "@rneui/themed": "github:react-native-elements/react-native-elements#themed",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-circular-progress-indicator": "^3.0.0",
     "react-native-flash-message": "^0.2.1",
     "react-native-geolocation-service": "^5.3.0-beta.4",
