--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@rneui/base": "github:react-native-elements/react-native-elements#base",
@@ -27,11 +28,14 @@
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "^0.30.1",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.12.0",
     "react-native-reanimated": "^2.7.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
