--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-image-crop-picker": "^0.37.3",
+    "react-native-interactable-reanimated": "^0.0.15",
     "react-native-maps": "^0.30.1",
     "react-native-maps-directions": "^1.8.0",
     "react-native-pager-view": "^5.4.15",
@@ -38,6 +40,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
   },
