--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-maps-directions": "^1.8.0",
     "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.12.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.7.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
