--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-redux": "^7.2.8",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
