--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -225,6 +226,9 @@ dependencies {
    }
    implementation 'com.google.android.gms:play-services-base:17.2.1'
    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+   implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
+   implementation 'androidx.multidex:multidex:2.0.1'
+   implementation 'androidx.browser:browser:1.3.0'
    implementation project(':react-native-svg')
    implementation project(':rn-fetch-blob')  
 }
