--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^14.8.0",
     "@react-native-firebase/auth": "^14.8.0",
     "@react-native-firebase/messaging": "^14.8.0",
+    "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/material-top-tabs": "^6.2.1",
