--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -197,6 +197,7 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
+    implementation 'com.facebook.android:facebook-android-sdk:13.1.0'
     implementation project(':react-native-push-notification')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
