--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.67.4",
     "react-native-animatable": "^1.3.3",
     "react-native-circular-progress-indicator": "^3.0.0",
+    "react-native-fbsdk-next": "^8.0.0",
     "react-native-flash-message": "^0.2.1",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.4.0",
