--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/auth": "^14.8.0",
     "@react-native-firebase/messaging": "^14.8.0",
     "@react-native-google-signin/google-signin": "^7.2.2",
+    "@react-native-twitter-signin/twitter-signin": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/material-top-tabs": "^6.2.1",
