--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "react-native-interactable-reanimated": "^0.0.15",
     "react-native-maps": "^0.30.1",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-otp-textinput": "^0.0.9",
     "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.12.0",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.7.0",
     "react-native-safe-area-context": "^4.2.4",
