--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -232,6 +232,7 @@ dependencies {
    implementation 'androidx.browser:browser:1.3.0'
    implementation project(':react-native-svg')
    implementation project(':rn-fetch-blob')  
+   implementation project(':react-native-background-actions')
 }
 
 // Run this once to be able to run the application with BUCK
