--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-community/slider": "^4.2.2",
     "@react-native-firebase/app": "^14.8.0",
     "@react-native-firebase/auth": "^14.8.0",
     "@react-native-firebase/messaging": "^14.8.0",
@@ -23,9 +24,11 @@
     "@react-navigation/native-stack": "^6.6.1",
     "@rneui/base": "github:react-native-elements/react-native-elements#base",
     "@rneui/themed": "github:react-native-elements/react-native-elements#themed",
+    "link": "^1.4.1",
     "react": "17.0.2",
-    "react-native": "0.67.4",
+    "react-native": "^0.67.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-background-actions": "^2.6.7",
     "react-native-circular-progress-indicator": "^3.0.0",
     "react-native-fbsdk-next": "^8.0.0",
     "react-native-flash-message": "^0.2.1",
@@ -47,6 +50,7 @@
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
+    "react-native-track-player": "^2.1.3",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
