--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -233,6 +233,7 @@ dependencies {
    implementation project(':react-native-svg')
    implementation project(':rn-fetch-blob')  
    implementation project(':react-native-background-actions')
+   implementation project(':react-native-video')
 }
 
 // Run this once to be able to run the application with BUCK
