--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,8 @@ target 'MyFirstProject' do
 
   pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'MyFirstProjectTests' do
     inherit! :complete
     # Pods for testing
