--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-track-player": "^2.1.3",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-video": "^5.2.0",
+    "react-native-video-controls": "^2.8.1",
     "react-redux": "^7.2.8",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.2",
