--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -234,6 +234,7 @@ dependencies {
    implementation project(':rn-fetch-blob')  
    implementation project(':react-native-background-actions')
    implementation project(':react-native-video')
+   implementation project(':react-native-document-picker')
 }
 
 // Run this once to be able to run the application with BUCK
