--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
             <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
-            <data android:scheme="yourSchemeHere" />
+            <!-- <data android:scheme="yourSchemeHere" /> -->
         </intent-filter>
       </activity>
 
