--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-background-actions": "^2.6.7",
     "react-native-circular-progress-indicator": "^3.0.0",
+    "react-native-document-picker": "^8.1.0",
     "react-native-fbsdk-next": "^8.0.0",
     "react-native-flash-message": "^0.2.1",
     "react-native-geolocation-service": "^5.3.0-beta.4",
