--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rneui/base": "github:react-native-elements/react-native-elements#base",
     "@rneui/themed": "github:react-native-elements/react-native-elements#themed",
     "link": "^1.4.1",
+    "native-base": "^3.4.4",
     "react": "17.0.2",
     "react-native": "^0.67.4",
     "react-native-animatable": "^1.3.3",
@@ -55,6 +56,7 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0",
     "react-native-video-controls": "^2.8.1",
+    "react-native-view-shot": "^3.1.2",
     "react-redux": "^7.2.8",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.2",
