--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,6 +20,8 @@ target 'MyFirstProject' do
 
   pod 'react-native-view-shot', :path => '../node_modules/react-native-view-shot'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'MyFirstProjectTests' do
     inherit! :complete
     # Pods for testing
