--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-document-picker": "^8.1.0",
     "react-native-fbsdk-next": "^8.0.0",
     "react-native-flash-message": "^0.2.1",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.4.1",
