--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-gesture-handler": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-crop-picker": "^0.37.3",
+    "react-native-image-to-pdf": "^1.2.0",
     "react-native-interactable-reanimated": "^0.0.15",
     "react-native-maps": "^0.30.1",
     "react-native-maps-directions": "^1.8.0",
@@ -50,6 +51,7 @@
     "react-native-reanimated": "^2.7.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-share": "^7.4.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
