--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-background-actions": "^2.6.7",
     "react-native-circular-progress-indicator": "^3.0.0",
     "react-native-document-picker": "^8.1.0",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-fbsdk-next": "^8.0.0",
     "react-native-flash-message": "^0.2.1",
     "react-native-fs": "^2.20.0",
@@ -51,6 +52,7 @@
     "react-native-reanimated": "^2.7.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-select-dropdown": "^1.13.0",
     "react-native-share": "^7.4.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^12.3.0",
