--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "^0.67.4",
     "react-native-animatable": "^1.3.3",
     "react-native-background-actions": "^2.6.7",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress-indicator": "^3.0.0",
     "react-native-document-picker": "^8.1.0",
     "react-native-dropdown-picker": "^5.4.2",
